@@ -432,7 +432,7 @@ public class JSONArray {
 	 * @throws JSONException if the value is not finite.
 	 * @return this. */
 	public JSONArray put (double value) throws JSONException {
-		Double d = new Double(value);
+		Double d = Double.valueOf(value);
 		JSONObject.testValidity(d);
 		put(d);
 		return this;
@@ -443,7 +443,7 @@ public class JSONArray {
 	 * @param value An int value.
 	 * @return this. */
 	public JSONArray put (int value) {
-		put(new Integer(value));
+		put(Integer.valueOf(value));
 		return this;
 	}
 
@@ -452,7 +452,7 @@ public class JSONArray {
 	 * @param value A long value.
 	 * @return this. */
 	public JSONArray put (long value) {
-		put(new Long(value));
+		put(Long.valueOf(value));
 		return this;
 	}
 
@@ -501,7 +501,7 @@ public class JSONArray {
 	 * @return this.
 	 * @throws JSONException If the index is negative or if the value is not finite. */
 	public JSONArray put (int index, double value) throws JSONException {
-		put(index, new Double(value));
+		put(index, Double.valueOf(value));
 		return this;
 	}
 
@@ -512,7 +512,7 @@ public class JSONArray {
 	 * @return this.
 	 * @throws JSONException If the index is negative. */
 	public JSONArray put (int index, int value) throws JSONException {
-		put(index, new Integer(value));
+		put(index, Integer.valueOf(value));
 		return this;
 	}
 
@@ -523,7 +523,7 @@ public class JSONArray {
 	 * @return this.
 	 * @throws JSONException If the index is negative. */
 	public JSONArray put (int index, long value) throws JSONException {
-		put(index, new Long(value));
+		put(index, Long.valueOf(value));
 		return this;
 	}
 
